fix height on mobile version

--- a/style.css
+++ b/style.css
@@ -23,7 +23,14 @@ main {
 
 @media screen and (max-width: 720px) {
   main {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     flex-direction: column;
+    height: auto;
+    width: 100vw;
   }
 }
 
